www: prevent bookmark tags from overflowing

--- a/internal/http/www/static/www.css
+++ b/internal/http/www/static/www.css
@@ -60,6 +60,11 @@ code {
   flex-wrap: nowrap;
 }
 
+.level-left,
+.level-item {
+  flex-shrink: unset;
+}
+
 .tag a {
   color: var(--bulma-text);
 }
